test/files/pos/constant-warning.check
constant-warning.scala:2: warning: Evaluation of a constant expression results in an arithmetic error: / by zero
  val fails = 1 + 2 / (3 - 2 - 1)
                    ^
one warning found
